# esp-idf-parallel-tft

./: 4-line_resistance_touch_screen.txt  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
components/tft_library/: 8080_lcd_esp32s3.c  CMakeLists.txt  fontx.c  fontx.h  hx8347.c  hx8347.h  i2s_lcd.c  i2s_lcd.h  i2s_lcd_esp32_driver.c  i2s_lcd_esp32s2_driver.c  ili9225.c  ili9225.h  ili9320.c  ili9320.h  ili9325.c  ili9325.h  ili9327.c  ili9327.h  ili9341.c  ili9341.h  ili9342.c  ili9342.h  ili9481.c  ili9481.h  ili9486.c  ili9486.h  ili9486.txt  ili9488.c  ili9488.h  lcd_com.c  lcd_com.h  lcd_lib.c  lcd_lib.h  lgdp4532.c  lgdp4532.h  r61509.c  r61509.h  s6d1121.c  s6d1121.h  s6d1121.txt  (+4 more)
lcd_id/: hx8347i  ili9325.txt  ili9327.txt  ili9340.txt  ili9341.txt  ili9342.txt  ili9481.txt  ili9488.txt  r61505.txt  r61509.txt  spfd5408.txt  st7793.txt  st7796.txt
main/: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.v4  Kconfig.projbuild  decode_jpeg.c  decode_jpeg_v4.c  decode_jpeg_v5.c  decode_png.c  idf_component.yml  main.c  pngle.c  pngle.h
